@@ -128,7 +128,7 @@ public class TheTvDBPlugin extends ImdbPlugin {
                 Banners banners = tvDB.getBanners(id);
 
                 if (!movie.isOverrideTitle()) {
-                    // issue 1214 : prevent replacing data with blank when tv plugin fail
+                    // issue 1214 : prevent replacing data with blank when TV plugin fails
                     if (series.getSeriesName() != null && series.getSeriesName().trim().length() > 0) {
                         movie.setTitle(series.getSeriesName());
                         movie.setOriginalTitle(series.getSeriesName());
